# own-the-newsletter

./: .env.example  .gitignore  CONTEXT.md  LICENSE  PRD.md  README.md  README_CN.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  body_processor.py  config.py  email_parser.py  feed_publisher.py  imap_source.py  logging_config.py  main.py  recipient_matcher.py  rss_renderer.py  scheduler.py  schemas.py  security.py  sender_matcher.py  store.py  sync_engine.py  timeutil.py
backend/tests/: test_api_auth.py  test_body_processor.py  test_feed_publisher.py  test_imap_source.py  test_recipient_matcher.py  test_rss_renderer.py  test_scheduler.py  test_sender_matcher.py  test_store.py  test_sync_engine.py
docs/adr/: 0001-choose-python-runtime.md  0002-local-feed-files-with-sqlite-state.md  0003-plaintext-local-imap-credentials.md  0004-web-admin-configuration.md  0005-separate-admin-frontend-and-fastapi-backend.md  0006-random-feed-urls.md  0007-react-vite-admin-panel.md  0008-same-origin-production-access.md  0009-encrypt-stored-imap-credentials.md  0010-single-backend-scheduler.md  0011-store-raw-and-sanitized-bodies.md  0012-feed-scoped-imap-configuration.md  0013-mailbox-sync-groups.md  0014-docker-compose-first-deployment.md  0015-nginx-same-origin-proxy.md  0016-cloudflare-out-of-first-version-scope.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.tsx  styles.css
frontend/src/components/: icons.tsx  ui.tsx
nginx/: default.conf
(+3 files in other folders)
