[project]
name = "own-new-newsletter-backend"
version = "0.1.0"
description = "FastAPI backend for Own New Newsletter"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "cryptography>=44,<47",
  "fastapi>=0.115,<1",
  "inscriptis>=2.5,<3",
  "nh3>=0.2,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
